# Air-Quality

./: Cargo.toml  README.md  create_topic.sh  docker-compose.yml
src/: config.rs  lib.rs  main.rs  model.rs
src/kafka/: consumer.rs  producer.rs
weather_prefect/: Dockerfile  README.md  deploy.py  docker-compose.yml  entrypoint.sh  requirements.txt
weather_prefect/flows/: run_model_drift_flow.py  run_rbt_flow.py
