[package]
name = "rust_kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.37.0", features = ["tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.28"
rand = "0.9.1"
clap = { version = "4.5.38", features = ["derive"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio-stream = "0.1.17"
